Améliorations SEO et accessibilité apportées selon l'audit du site effectuée :  - modifiactions du code  - reduction des images  - mise aux format jpg de certaines images  - mise au normae de contraste  - correction de certaines erreurs du code fourni

--- a/style.css
+++ b/style.css
@@ -720,7 +720,7 @@ h3 {
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
 }
 
 h1 {
@@ -753,8 +753,18 @@ h4 {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 
+.title-center {
+    width: 60%;
+    margin: auto;
+}
+
+.italic {
+    font-style: italic;
+    margin-bottom: 0;
+}
+
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(65, 62, 58, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -774,9 +784,17 @@ h4 {
 .bgc-atomic-tangerine {
     background-color: #CB4F11;
 }
+.bgc-atomic-tangerine ul li a {
+    color: #070505!important;
+}
 
 .tc-white {
     color: #F3976C!important;
+}
+
+/* couleur de contraste sur la bannière de la page 2*/
+.contrast {
+    color: #040512!important;
 }
 
 .btn-atomic-tangerine {
@@ -823,7 +841,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation-min.jpg");
 }
 
 @media (max-width: 1024px) {
@@ -849,13 +867,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
